--- a/Overwatch.theme.css
+++ b/Overwatch.theme.css
@@ -15,7 +15,7 @@
     color: #fff;
 }
 .app {
-    background-image: url(https://imgur.com/QF8xNms.png) !important;
+    background-image: url(http://i.imgur.com/W0EpDhy.jpg) !important;
 	background-size: cover !important;
 }
 
