--- a/Overwatch.theme.css
+++ b/Overwatch.theme.css
@@ -15,7 +15,7 @@
     color: #fff;
 }
 .app {
-    background-image: url(https://imgur.com/QF8xNms.png) !important;
+    background-image: url(https://images6.alphacoders.com/842/842584.jpg) !important;
 	background-size: cover !important;
 }
 
@@ -303,7 +303,7 @@ textarea {
 
 /* Settings */
 .settings .settings-inner {
-    background-image: url(https://imgur.com/YKiWE79.png) !important;
+    background-image: url(https://images4.alphacoders.com/865/865791.jpg) !important;
     background-size: cover;
     background-position: center center;
 }
